Fix search functionality

--- a/public/views/home/home.view.html
+++ b/public/views/home/home.view.html
@@ -14,7 +14,7 @@ Your Teams:
       </div>
       <div class="panel-body">
         <div ng-repeat="player in team.players">
-          <p>{{ player.player.username }} as {{ player.hero }}</p>
+          <p>{{ player.player }} as {{ player.hero }}</p>
         </div>
       </div>
     </div>
