--- a/public/views/search/search.view.html
+++ b/public/views/search/search.view.html
@@ -28,7 +28,7 @@
         <tr>
           <th class="col-xs-2">Name</th>
           <th class="col-xs-2">Coach</th>
-          <th class="col-xs-7">Composition</th>
+          <th class="col-xs-7">Description</th>
           <th class="col-xs-1"></th>
         </tr>
       </thead>
@@ -36,7 +36,7 @@
         <tr>
           <td>{{team.name}}</td>
           <td>{{team.coach}}</td>
-          <td>{{team.comp}}</td>
+          <td>{{team.description}}</td>
           <td><a class="btn btn-info" href="#/{{team.coachId}}/team/{{team.teamId}}">View</a></td>
         </tr>
       </tbody>
