--- a/public/views/team/team-view.view.html
+++ b/public/views/team/team-view.view.html
@@ -5,7 +5,7 @@
 <h3>Created By {{ model.team.coach_name }}</h3>
 
 <div ng-repeat="player in model.team.players">
-  <h3>{{ player.player.username }} as {{player.hero}}</h3>
+  <h3>{{ player.player }} as {{player.hero}}</h3>
 </div>
 
 <div class="row">
