--- a/public/views/team/team-update.view.html
+++ b/public/views/team/team-update.view.html
@@ -21,7 +21,7 @@
     <div id="playerDiv" class="thumbnail col-xs-4">
       <div id="playerDivCaption" class="caption">
         <h2>{{ player.hero }}</h2>
-        <h3>{{ player.player }}</h3>
+        <h3>{{ player.player.username }}</h3>
       </div>
     </div>
   </div>
