--- a/public/views/team/team-view.view.html
+++ b/public/views/team/team-view.view.html
@@ -23,6 +23,6 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" ng-show="model.team_and_user_match">
   <a href="#/{{model.team.coach}}/team/{{model.team._id}}/update" class="btn btn-success btn-block btn-space">Edit Team</a>
 </div>
