--- a/public/views/team/team-update.view.html
+++ b/public/views/team/team-update.view.html
@@ -16,9 +16,9 @@
 <div ng-if="model.team.players.length < 6" class="row">
   <a class="btn btn-primary" id="addPlayersButton" ng-click="model.openModal()">Add Player</a>
 </div>
-<div class="row col-xs-12" id="addPlayers">
+<div class="row col-xs-12 well" id="addPlayers">
   <div ng-repeat="player in model.team.players">
-    <div id="playerDiv" class="thumbnail col-xs-4">
+    <div id="playerDiv" class="thumbnail col-xs-3 col-xs-offset-1">
       <div id="playerDivCaption" class="caption">
         <h2>{{ player.hero }}</h2>
         <h3>{{ player.player.username }}</h3>
