Fix update view

--- a/public/views/team/team-update.view.html
+++ b/public/views/team/team-update.view.html
@@ -18,7 +18,7 @@
 </div>
 <div class="row col-xs-12 well" id="addPlayers">
   <div ng-repeat="player in model.team.players">
-    <div id="playerDiv" class="thumbnail col-xs-3 col-xs-offset-1">
+    <div id="playerDiv" class="thumbnail col-xs-5">
       <div id="playerDivCaption" class="caption">
         <h2>{{ player.hero }}</h2>
         <h3>{{ player.player.username }}</h3>
